# underchex

./: .5_whys_retro__forgotten_decision_migration.md.swp  .agent_diary__session_13.0.0.md.swp  .agent_toolcall_48.1.txt  .agent_toolcall_49.1.txt  .agent_toolcall_49.2.txt  .agent_toolcall_50.1.txt  .envrc  .gitignore  .human_preferences__bowei_(update_6.0.0).md.swp  .human_preferences__session_16.0.0_update.md.swp  .human_preferences__session_7.0.0.md.swp  .human_preferences__session_7.0.0_(final).md.swp  .index  .nbrc  .nbrc.swp  .offset_hex_coords_-_cleaner_representations.md.swp  .project_status_updates.md.swp  .proto-01.3_board_data_structure.md.swp  .proto-01__hex_orientation_refactor_plan.md.swp  .proto-01_breakdown_-_minimal_playable_prototype.md.swp  .proto-01_progress_review_&_recommendations.md.swp  .rendering_approaches_for_browser_games.md.swp  .underchex_-_plan_-_testing_philosophy_for_proto01.md.swp  .underchex_-_proposal_-_piece_data_spec.md.swp  .underchex_-_reference_-_immediate_mode_canvas_rendering.md.swp  .underchex_-_reference_-_testing_philosophy.md.swp  .underchex_tickets_-_rebuild_from_scratch.md.swp  .worklog_details__hex.ts_testing_+_bug_fix.md.swp  001-nb-hub.md  002-nb-reference.md  010-template-hub.md  017-template-compounding-learning.md  018-template-agent-diary.md  019-template-human-prefs.md  20260121140130.md  20260122025137.md  20260122030456.md  20260122064758.md  20260122091007.md  5_whys_retro__forgotten_decision_migration.md  (+182 more)
.claude/: settings.json
.docs/: agent-ids.txt  skill-from-retro.sh
.gemini/: settings.json
.log/: .index
Project/: .index  Underchex - Hub  Underchex - Reference - Structure
docs/: docs.json
nb-visual/: README.md  build_nb_graph.py  graph.json  index.html  tags.json
proto01/: index.html  package.json  (+3 more)
src/python/: pyproject.toml
src/python/tests/: __init__.py  test_ai.py  test_board.py  test_crossimpl.py  test_crossimpl_tablebase.py  test_game.py  test_moves.py  test_openingbook.py  test_tablebase.py
src/python/underchex/: __init__.py  ai.py  board.py  game.py  gui.py  moves.py  openingbook.py  play.py  tablebase.py  types.py
src/rust/: .gitignore  Cargo.toml  demo.html
src/rust/src/: ai.rs  board.rs  game.rs  lib.rs  moves.rs  tablebase.rs  types.rs
src/rust/tests/: crossimpl_tablebase_test.rs  crossimpl_test.rs
tools-llm/winow/: .gitignore  PHASE1_VERIFICATION.LLM.md  PLAN.human.md  PLAN1_UNREVIEWED.LLM.md  PROMPT_CLI_ENHANCEMENTS.LLM.md  PROMPT_PROJECT_SETUP.LLM.md  README.md  main.py  pyproject.toml  task2.4.md
tools-llm/winow/tests/: TEST_FLOWS.md  test_cli.py
tools-llm/winow/winow/: __init__.py  cli.py  config.py
(+317 files in other folders)
