[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "underchex"
version = "0.1.0"
description = "Hexagonal chess variant game engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["chess", "hexagonal", "game", "underchex"]
authors = [
    {name = "Underchex Team"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
underchex = "underchex.play:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["underchex*"]
