[project]
name = "winow"
version = "0.1.0"
description = "AI Agent Session Manager - launch coding agents in tmux with git worktrees"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[project.scripts]
winow = "winow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
